--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!--<script src="node_modules/angular-l10n/bundles/angular-l10n.umd.js"></script>-->
 </head>
 <body>
   <app-root>Loading...</app-root>
